[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "anchor-cli"
version = "0.1.1"
description = "A Docker workflow tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Jesper Fjellin", email = "jesperfjellin@gmail.com" }
]

[project.scripts]
anchor = "anchor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["anchor-cli"]
